@@ -1,3 +1,8 @@
+2009-06-30  Chong Yidong  <cyd@stupidchicken.com>
+
+	* xftfont.c (xftfont_open): Avoid passing NULL argument to
+	XftLockFace.
+
 2009-06-30  Jason Rumney  <jasonr@gnu.org>
 
 	* w32term.c (w32_initialize): Use GetModuleHandle for library that
